--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ package.json
 vue.config.js
 front/gestao-pecuaria-frontend/README.md
 front/gestao-pecuaria-frontend/.gitignore
-.env
-back/projetos/gestaoPecuaria/media/fotos-animais
+back/projetos/gestaoPecuaria/gestaoPecuaria/.env
+back/projetos/gestaoPecuaria/media
 
