--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,6 @@ vue.config.js
 front/gestao-pecuaria-frontend/README.md
 front/gestao-pecuaria-frontend/.gitignore
 back/projetos/gestaoPecuaria/gestaoPecuaria/.env
+.env
 back/projetos/gestaoPecuaria/media
 
